Adds navigation controller, moves image assets

--- a/TrackCoach/TrackCoach-Info.plist
+++ b/TrackCoach/TrackCoach-Info.plist
@@ -29,9 +29,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 Peter Carnesciali</string>
-	<key>UILaunchStoryboardName</key>
-	<string>Main</string>
+	<string>Copyright © 2015 Peter Carnesciali</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
@@ -51,5 +49,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
